# WhoCiteYourPapers

./: .gitignore  LICENSE  README.md  README_CN.md  analyze_results.py  fetch_author_details.py  fetch_citations.py  filter_authors.py  main.py  merge_research_results.py  pyproject.toml  requirements.txt  research_authors.py
config/: config.example.toml  config.py
src/whocite/: cli.py  config.py  step1_fetch_citations.py  step2_fetch_author_details.py  step3_analyze_results.py  step4_filter_authors.py  step5_research_authors.py  step6_merge_results.py
